--- a/src/pages/produktoversikt/produktoversikt.njk
+++ b/src/pages/produktoversikt/produktoversikt.njk
@@ -19,9 +19,9 @@ bodyClass: ''
         const item = el.querySelector('h2').textContent.toLowerCase()
         if (this.search === '') {
           return (
-            el.dataset.type.startsWith(this.typeFilter)
+            el.dataset.type.includes(this.typeFilter)
             &&
-            el.dataset.area.startsWith(this.areaFilter)
+            el.dataset.area.includes(this.areaFilter)
           )
         } else {
           this.typeFilter = 'alle'
@@ -263,8 +263,8 @@ bodyClass: ''
                 class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-deepblue-100"
                 x-bind:class="expanded ? '' : ''"
                 x-show="filterItem($el)"
-                data-type="alle {% for item in product.data.type %}{{ item | slugify }} {% endfor }}"
-                data-area="alle {% for item in product.data.area %}{{ item | slugify }} {% endfor }}">
+                data-type="alle {% for item in product.data.type %}{{ item | slugify }} {% endfor %}"
+                data-area="alle {% for item in product.data.area %}{{ item | slugify }} {% endfor %}">
 
                 <div
                   class="relative z-10 flex items-center gap-4 py-4 -my-px text-left px-clamp-gap -mx-clamp-gap sm:mx-0 sm:px-4 sm:rounded-lg fine:hover:z-20"
