--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,15 +4,15 @@
 
 @layer base {
   
-/* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1280,20,1.2,0,0,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+/* @link https://utopia.fyi/clamp/calculator?a=320,1200,20—24 */
 
   :root {
-    --text-xs: clamp(0.75rem, 0.7083rem + 0.2083vi, 0.875rem);
-    --text-sm: clamp(0.875rem, 0.8333rem + 0.2083vi, 1rem);
-    --text-md: clamp(1.125rem, 1.0833rem + 0.2083vi, 1.25rem);
-    --text-lg: clamp(1.25rem, 1.1667rem + 0.4167vi, 1.5rem);
-    --text-xl: clamp(1.75rem, 1.5833rem + 0.8333vi, 2.25rem);
-    --text-2xl: clamp(2.25rem, 1.8152rem + 2.1739vi, 3.5rem);
+    --fluid-12-14: clamp(0.75rem, 0.7045rem + 0.2273vi, 0.875rem);
+    --fluid-14-16: clamp(0.875rem, 0.8295rem + 0.2273vi, 1rem);
+    --fluid-18-20: clamp(1.125rem, 1.0795rem + 0.2273vi, 1.25rem);
+    --fluid-20-24: clamp(1.25rem, 1.1591rem + 0.4545vi, 1.5rem);
+    --fluid-32-40: clamp(2rem, 1.8182rem + 0.9091vi, 2.5rem);
+    --fluid-36-56: clamp(2.25rem, 1.7955rem + 2.2727vi, 3.5rem);
   }
 
   body {
