--- a/src/pages/produkt/sykepenger/sykepenger-2.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-2.njk
@@ -40,7 +40,7 @@ variant: '2'
 
     {# Sticky Chapter TOC #}
     <div 
-      class="sticky top-0 z-10 shadow-lg isolate col-full" 
+      class="sticky top-0 z-10 isolate col-main" 
       aria-hidden="true"
       x-show="showToc"
       x-transition:enter="transition ease-out duration-200"
@@ -48,31 +48,31 @@ variant: '2'
       x-transition:enter-end="opacity-100 translate-y-0"
       x-on:click.outside="expandToc = false"
     >
-      <button class="relative z-20 flex items-center justify-center w-full gap-1 px-3 py-2.5 col-full whitespace-nowrap bg-slate-100 hover:bg-white" type="button" x-on:click="expandToc = !expandToc">
+      <button class="relative mx-auto z-20 mt-2 flex items-center justify-center gap-1 pl-5 pr-3.5 py-2.5 whitespace-nowrap bg-slate-500 text-white" x-bind:class="expandToc ? 'w-full rounded-t-xl hover:bg-slate-600' : 'rounded-full shadow-lg'" type="button" x-on:click="expandToc = !expandToc">
         <span>Innhold på siden</span>
         {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5') | safe }}
       </button>
       <div 
-        class="absolute inset-x-0 top-0 z-10 grid pt-20 pb-8 rounded-b-lg grid-cols-center" 
+        class="absolute inset-x-0 z-10 px-5 pt-20 pb-8 text-white rounded-xl top-2 bg-slate-500 grid-cols-center" 
         x-bind:class="expandToc ? 'bg-slate-100 shadow-lg' : 'hidden'"
       >
-        <ol class="grid gap-2 toc toc--multi toc--sticky">
+        <ol class="grid gap-3 toc toc--multi toc--sticky">
           {% for chapter in chapters %}
           <li class="grid">
             <a 
-              class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" 
+              class="flex gap-1 p-1 -m-1 font-medium text-white underline group text-base/snug hover:decoration-2" 
               href="#{{ chapter.data.title | slugify }}" 
               x-on:click="expandToc = false"
             >
               {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
               {{ chapter.data.title }}
             </a>
-            <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p>
+            <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-80">{{ chapter.data.ingress | safe }}</p>
           </li>
           {% endfor %}
           <li class="pt-4 mt-1 border-t border-slate-400/25">
             <a 
-              class="flex gap-1 p-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" 
+              class="flex gap-1 p-1 text-white underline group text-base/snug hover:decoration-2" 
               href="{{ page.url }}" 
               x-on:click="expandToc = false"
             >
