--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -406,10 +406,8 @@
     --R: 6px;
 
     mask:
-    radial-gradient(var(--R) at left 50% top calc(var(--size) + var(--p)), #000 99%, #0000 101%) 
-      calc(50% - 2 * var(--size)) 0/calc(4 * var(--size)) 100%,
-    radial-gradient(var(--R) at left 50% top calc(-1 * var(--p)), #0000 99%, #000 101%) 
-      left 50% top var(--size) / calc(4 * var(--size)) 100% repeat-x;
+      radial-gradient(var(--R) at left 50% top calc(var(--size) + var(--p)), #000 99%, #0000 101%) calc(50% - 2 * var(--size)) 0/calc(4 * var(--size)) 100%,
+      radial-gradient(var(--R) at left 50% top calc(-1 * var(--p)), #0000 99%, #000 101%) left 50% top var(--size) / calc(4 * var(--size)) 100% repeat-x;
   }
 }
 
